[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.6.20", features = ["macros"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "2.3.3"
lazy-regex = "2.5.0"
async-trait = "0.1.80"
strum_macros = "0.26.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.82"
httpc-test = "0.1.9"